# chefies-backend

./: .firebaserc  .gitignore  Dockerfile  README.md  firebase.json  get_emulator_token.py  pyproject.toml  storage_check.py
.github/workflows/: deployment.yml
cefies/: app.py  security.py
cefies/internal/: bucket.py  firestore.py  gemini.py
cefies/logic/: recipe_generator.py
cefies/models/: auth.py  firebase.py  generate.py  profile.py  response.py
cefies/models/db/: __init__.py  recipe.py  user.py
cefies/models/forms/: auth.py  base.py  profile.py
cefies/routes/: __init__.py  auth.py  index.py  profile.py
keys.examples/: credentials.json
