[tool.poetry]
name = "cefies"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <renrror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
firebase-admin = "^6.5.0"
google-generativeai = "^0.5.4"
pyjwt = "^2.8.0"
fireo = "^2.2.1"
bcrypt = "^4.1.3"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
